--- a/resources/lang/es_ES.xml
+++ b/resources/lang/es_ES.xml
@@ -25,6 +25,13 @@
     <translation key="invalid_speed">¡Velocidad inválida! Debe ser mayor que 0.</translation>
     <translation key="invalid_song_format">Formato de canción no válido</translation>
 
+    <translation key="sky_only_warning">¡Solo funciona en Sky! Por favor, inicia Sky Children of the Light.</translation>
+    <translation key="sky_window_focus_error">No se pudo enfocar la ventana de Sky. Asegúrate de que Sky esté ejecutándose y visible.</translation>
+
+    <translation key="speed_too_slow">Velocidad demasiado lenta. La velocidad mínima es {min_speed}. Se establecerá en {min_speed_again}.</translation>
+    <translation key="speed_too_fast">Velocidad demasiado rápida. La velocidad máxima es {max_speed}. Se establecerá en {max_speed_again}.</translation>
+    <translation key="speed_setting_failed">Error al establecer la velocidad: {error}</translation>
+
     <!-- ================= -->
     <!-- FUNCIONES DEL REPRODUCTOR DE MÚSICA -->
     <!-- ================= -->
@@ -33,9 +40,9 @@
     <translation key="disabled">Deshabilitado</translation>
     <translation key="duration">Duración de la presión de la tecla</translation>
     <translation key="speed_control">Velocidad</translation>
-    <translation key="current_speed">velocidad actual</translation>
+    <translation key="current_speed">Velocidad actual</translation>
     <translation key="preset">Preajuste</translation>
-
+    
     <!-- ================= -->
     <!-- IDIOMA Y DISEÑO -->
     <!-- ================= -->
@@ -45,7 +52,7 @@
     <translation key="save_button_text">Guardar</translation>
     <translation key="smooth_ramping">Transiciones Suaves</translation>
     <translation key="smooth_ramping_info">Ajusta suavemente la velocidad al principio y al final de la canción para transiciones más naturales.</translation>
-    <translation key="playing_button_text">Sonando...</translation>
+    <translation key="playing_button_text">Reproduciendo...</translation>
     <translation key="paused_button_text">Pausado</translation>
     <translation key="restart_button_text">¿Reiniciar?</translation>
     <translation key="pause_key_hint">o usa [pause_key]</translation>
@@ -68,5 +75,134 @@
     <translation key="exe_path_required_exit">La aplicación se cerrará porque se necesita el Sky.exe</translation>
     <translation key="must_select_sky">Por favor, selecciona el archivo Sky.exe</translation>
     <translation key="exe_path_invalid">El archivo seleccionado no existe</translation>
-    
+
+    <!-- ================= -->
+    <!-- Settings Window -->
+    <!-- ================= -->
+    <translation key="settings_window_title">Configuración</translation>
+    <translation key="info_title">Información</translation>
+
+    <!-- ================= -->
+    <!-- Game Settings -->
+    <!-- ================= -->
+    <translation key="settings_game_title">Configuración del Juego</translation>
+    <translation key="settings_sky_path">Ruta de Sky.exe</translation>
+
+    <!-- ================= -->
+    <!-- Playback Settings -->
+    <!-- ================= -->
+    <translation key="settings_playback_title">Configuración de Reproducción</translation>
+    <translation key="settings_key_durations">Duración de Pulsación de Teclas</translation>
+    <translation key="settings_key_durations_hint">(segundos separados por comas)</translation>
+    <translation key="settings_speed_presets">Velocidades</translation>
+    <translation key="settings_speed_presets_hint">(valores separados por comas)</translation>
+    <translation key="settings_custom_keys">Teclas Personalizadas</translation>
+    <translation key="settings_edit_keys">Editar Teclas</translation>
+    <translation key="settings_custom_keys_status">{count} teclas personalizadas</translation>
+    <translation key="settings_using_default_layout">Usando distribución predeterminada</translation>
+    <translation key="settings_custom_active">Personalizado (activo)</translation>
+    <translation key="settings_custom_available">Personalizado disponible</translation>
+
+    <!-- ================= -->
+    <!-- Delays -->
+    <!-- ================= -->
+    <translation key="settings_delays_title">Retrasos</translation>
+    <translation key="settings_initial_delay">Retraso Inicial</translation>
+    <translation key="settings_pause_delay">Retraso de Pausa</translation>
+
+    <!-- ================= -->
+    <!-- Ramping -->
+    <!-- ================= -->
+    <translation key="settings_ramping_title">Transiciones de Velocidad</translation>
+    <translation key="settings_ramping_start">Pasos de Inicio</translation>
+    <translation key="settings_ramping_start_hint">(50% → 100%)</translation>
+    <translation key="settings_ramping_end">Pasos de Finalización</translation>
+    <translation key="settings_ramping_end_hint">(100% → 50%)</translation>
+    <translation key="settings_ramping_after_pause">Pasos después de Pausa</translation>
+    <translation key="settings_ramping_pause_hint">(50% → 100%)</translation>
+
+    <!-- ================= -->
+    <!-- Interface -->
+    <!-- ================= -->
+    <translation key="settings_interface_title">Interfaz</translation>
+    <translation key="settings_language">Idioma</translation>
+    <translation key="settings_theme">Tema</translation>
+    <translation key="theme_dark">Oscuro</translation>
+    <translation key="theme_light">Claro</translation>
+    <translation key="settings_keyboard_layout">Distribución de Teclado</translation>
+    <translation key="settings_pause_key">Tecla de Pausa</translation>
+
+    <!-- ================= -->
+    <!-- Buttons -->
+    <!-- ================= -->
+    <translation key="settings_save">Guardar</translation>
+    <translation key="settings_reset">Restablecer</translation>
+    <translation key="settings_cancel">Cancelar</translation>
+
+    <!-- ================= -->
+    <!-- Messages -->
+    <!-- ================= -->
+    <translation key="settings_saved">¡Configuración guardada!</translation>
+    <translation key="settings_save_error">Error al guardar la configuración</translation>
+    <translation key="settings_reset_confirm">¿Restablecer toda la configuración a los valores predeterminados?</translation>
+    <translation key="settings_reset_success">¡Configuración restablecida!</translation>
+    <translation key="settings_reset_error">Error al restablecer</translation>
+    <translation key="settings_restart_required">Algunas configuraciones requieren reiniciar la aplicación para que surtan efecto.</translation>
+    <translation key="settings_restart_now">¿Reiniciar ahora?</translation>
+    <translation key="settings_restart_later">Configuración guardada. Por favor, reinicia la aplicación más tarde.</translation>
+    <translation key="settings_restart_failed">Reinicio automático fallido. Por favor, reinicia la aplicación manualmente.</translation>
+    <translation key="custom_layout_not_found">Distribución personalizada no encontrada. Cambiado automáticamente a {fallback_layout}.</translation>
+
+    <!-- ================= -->
+    <!-- Validation Errors -->
+    <!-- ================= -->
+    <translation key="settings_error_numbers">Por favor, introduce números válidos</translation>
+    <translation key="settings_error_positive">Por favor, introduce valores positivos</translation>
+    <translation key="settings_error_empty">Por favor, completa todos los campos</translation>
+    <translation key="settings_error_pause_key">La tecla de pausa debe ser exactamente un carácter</translation>
+    <translation key="settings_error_general">Entrada no válida</translation>
+
+    <!-- ================= -->
+    <!-- Key Editor -->
+    <!-- ================= -->
+    <translation key="key_editor_title">Editor de Distribución de Teclas</translation>
+    <translation key="key_editor_instructions">Haz clic en una tecla abajo y luego presiona la asignación deseada en tu teclado. Escape para cancelar, Retroceso para eliminar.</translation>
+    <translation key="key_editor_current_key">Tecla actual:</translation>
+    <translation key="key_editor_no_selection">Ninguna tecla seleccionada</translation>
+    <translation key="key_editor_press_key">Presiona una tecla...</translation>
+    <translation key="key_editor_empty">(vacío)</translation>
+    <translation key="key_editor_delete">Eliminar Personalizado</translation>
+    <translation key="key_editor_changes">{changed}/{total} teclas modificadas</translation>
+    <translation key="key_editor_saved_settings_hint">Distribución personalizada guardada. Por favor, haz clic en 'Guardar' en Configuración para que los cambios surtan efecto.</translation>
+
+    <!-- ================= -->
+    <!-- Status Labels -->
+    <!-- ================= -->
+    <translation key="key_editor_default">Predeterminado</translation>
+    <translation key="key_editor_custom">Personalizado</translation>
+    <translation key="key_editor_empty_error">La tecla {key} no puede estar vacía</translation>
+
+    <!-- ================= -->
+    <!-- Buttons -->
+    <!-- ================= -->
+    <translation key="key_editor_save">Guardar</translation>
+    <translation key="key_editor_reset_all">Restablecer Todo</translation>
+    <translation key="key_editor_import">Importar</translation>
+    <translation key="key_editor_cancel">Cancelar</translation>
+
+    <!-- ================= -->
+    <!-- Dialog Messages -->
+    <!-- ================= -->
+    <translation key="key_editor_saved">¡Distribución de teclas guardada!</translation>
+    <translation key="key_editor_save_error">Error al guardar la distribución de teclas</translation>
+    <translation key="key_editor_reset_confirm">¿Restablecer todas las teclas a los valores predeterminados?</translation>
+    <translation key="key_editor_import_title">Importar Distribución de Teclas</translation>
+    <translation key="key_editor_import_success">Distribución de teclas importada</translation>
+    <translation key="key_editor_import_error">Error al importar la distribución de teclas</translation>
+    <translation key="key_editor_no_changes">No se realizaron cambios en la distribución personalizada.</translation>
+    <translation key="key_editor_unconfirm_changes">Tienes cambios sin guardar. ¿Guardar antes de cerrar?</translation>
+    <translation key="key_editor_delete_custom_layout_confirm">¿Eliminar distribución personalizada y volver a la distribución predeterminada?</translation>
+    <translation key="key_editor_custom_layout_saved_activated">Distribución personalizada guardada y activada.</translation>
+    <translation key="key_editor_error_deleting_custom_layout">Error al eliminar la distribución personalizada.</translation>
+
 </translations>
