--- a/resources/lang/nl_NL.xml
+++ b/resources/lang/nl_NL.xml
@@ -25,6 +25,13 @@
     <translation key="invalid_speed">Ongeldige snelheid! Moet groter zijn dan 0.</translation>
     <translation key="invalid_song_format">Ongeldig songformaat</translation>
 
+    <translation key="sky_only_warning">Werkt alleen in Sky! Start alstublieft Sky Children of the Light.</translation>
+    <translation key="sky_window_focus_error">Kon Sky-venster niet focussen. Zorg ervoor dat Sky actief en zichtbaar is.</translation>
+
+    <translation key="speed_too_slow">Snelheid te langzaam. Minimale snelheid is {min_speed}. Wordt ingesteld op {min_speed_again}.</translation>
+    <translation key="speed_too_fast">Snelheid te snel. Maximale snelheid is {max_speed}. Wordt ingesteld op {max_speed_again}.</translation>
+    <translation key="speed_setting_failed">Fout bij instellen snelheid: {error}</translation>
+
     <!-- ================= -->
     <!-- MUZIEKSPELERFUNCTIES -->
     <!-- ================= -->
@@ -33,9 +40,9 @@
     <translation key="disabled">Uitgeschakeld</translation>
     <translation key="duration">Toetsdrukduur</translation>
     <translation key="speed_control">Snelheid</translation>
-    <translation key="current_speed">huidige snelheid</translation>
+    <translation key="current_speed">Huidige snelheid</translation>
     <translation key="preset">Preset</translation>
-
+    
     <!-- ================= -->
     <!-- TAAL & LAYOUT -->
     <!-- ================= -->
@@ -46,7 +53,7 @@
     <translation key="smooth_ramping">Zachte Overgangen</translation>
     <translation key="smooth_ramping_info">Past de snelheid aan het begin en einde van het lied soepel aan voor natuurlijkere overgangen.</translation>
     <translation key="playing_button_text">Speelt...</translation>
-    <translation key="paused_button_text">Pauzeer</translation>
+    <translation key="paused_button_text">Gepauzeerd</translation>
     <translation key="restart_button_text">Opnieuw starten?</translation>
     <translation key="pause_key_hint">of gebruik [pause_key]</translation>
     
@@ -68,5 +75,134 @@
     <translation key="exe_path_required_exit">De applicatie wordt afgesloten omdat Sky.exe vereist is</translation>
     <translation key="must_select_sky">Selecteer het Sky.exe-bestand</translation>
     <translation key="exe_path_invalid">Het geselecteerde bestand bestaat niet</translation>
-    
+
+    <!-- ================= -->
+    <!-- Settings Window -->
+    <!-- ================= -->
+    <translation key="settings_window_title">Instellingen</translation>
+    <translation key="info_title">Informatie</translation>
+
+    <!-- ================= -->
+    <!-- Game Settings -->
+    <!-- ================= -->
+    <translation key="settings_game_title">Spelinstellingen</translation>
+    <translation key="settings_sky_path">Sky.exe pad</translation>
+
+    <!-- ================= -->
+    <!-- Playback Settings -->
+    <!-- ================= -->
+    <translation key="settings_playback_title">Afspeelinstellingen</translation>
+    <translation key="settings_key_durations">Toetsdrukduur</translation>
+    <translation key="settings_key_durations_hint">(seconden gescheiden door komma's)</translation>
+    <translation key="settings_speed_presets">Snelheden</translation>
+    <translation key="settings_speed_presets_hint">(waarden gescheiden door komma's)</translation>
+    <translation key="settings_custom_keys">Aangepaste Toetsen</translation>
+    <translation key="settings_edit_keys">Toetsen Bewerken</translation>
+    <translation key="settings_custom_keys_status">{count} toetsen aangepast</translation>
+    <translation key="settings_using_default_layout">Standaardindeling gebruiken</translation>
+    <translation key="settings_custom_active">Aangepast (actief)</translation>
+    <translation key="settings_custom_available">Aangepast beschikbaar</translation>
+
+    <!-- ================= -->
+    <!-- Delays -->
+    <!-- ================= -->
+    <translation key="settings_delays_title">Vertragingen</translation>
+    <translation key="settings_initial_delay">Startvertraging</translation>
+    <translation key="settings_pause_delay">Pauzevertraging</translation>
+
+    <!-- ================= -->
+    <!-- Ramping -->
+    <!-- ================= -->
+    <translation key="settings_ramping_title">Snelheidsovergangen</translation>
+    <translation key="settings_ramping_start">Startstappen</translation>
+    <translation key="settings_ramping_start_hint">(50% → 100%)</translation>
+    <translation key="settings_ramping_end">Eindstappen</translation>
+    <translation key="settings_ramping_end_hint">(100% → 50%)</translation>
+    <translation key="settings_ramping_after_pause">Stappen na Pauze</translation>
+    <translation key="settings_ramping_pause_hint">(50% → 100%)</translation>
+
+    <!-- ================= -->
+    <!-- Interface -->
+    <!-- ================= -->
+    <translation key="settings_interface_title">Interface</translation>
+    <translation key="settings_language">Taal</translation>
+    <translation key="settings_theme">Thema</translation>
+    <translation key="theme_dark">Donker</translation>
+    <translation key="theme_light">Licht</translation>
+    <translation key="settings_keyboard_layout">Toetsenbordindeling</translation>
+    <translation key="settings_pause_key">Pauze Toets</translation>
+
+    <!-- ================= -->
+    <!-- Buttons -->
+    <!-- ================= -->
+    <translation key="settings_save">Opslaan</translation>
+    <translation key="settings_reset">Resetten</translation>
+    <translation key="settings_cancel">Annuleren</translation>
+
+    <!-- ================= -->
+    <!-- Messages -->
+    <!-- ================= -->
+    <translation key="settings_saved">Instellingen opgeslagen!</translation>
+    <translation key="settings_save_error">Fout bij opslaan instellingen</translation>
+    <translation key="settings_reset_confirm">Alle instellingen resetten naar standaardwaarden?</translation>
+    <translation key="settings_reset_success">Instellingen gereset!</translation>
+    <translation key="settings_reset_error">Fout bij resetten</translation>
+    <translation key="settings_restart_required">Sommige instellingen vereisen een herstart van de applicatie om effect te hebben.</translation>
+    <translation key="settings_restart_now">Nu herstarten?</translation>
+    <translation key="settings_restart_later">Instellingen opgeslagen. Herstart de applicatie later.</translation>
+    <translation key="settings_restart_failed">Automatisch herstarten mislukt. Herstart de applicatie handmatig.</translation>
+    <translation key="custom_layout_not_found">Aangepaste indeling niet gevonden. Automatisch overgeschakeld naar {fallback_layout}.</translation>
+
+    <!-- ================= -->
+    <!-- Validation Errors -->
+    <!-- ================= -->
+    <translation key="settings_error_numbers">Voer geldige nummers in</translation>
+    <translation key="settings_error_positive">Voer positieve waarden in</translation>
+    <translation key="settings_error_empty">Vul alle velden in</translation>
+    <translation key="settings_error_pause_key">Pauze toets moet precies één teken zijn</translation>
+    <translation key="settings_error_general">Ongeldige invoer</translation>
+
+    <!-- ================= -->
+    <!-- Key Editor -->
+    <!-- ================= -->
+    <translation key="key_editor_title">Toetsindeling Editor</translation>
+    <translation key="key_editor_instructions">Klik op een toets hieronder en druk dan op de gewenste toewijzing op je toetsenbord. Escape om te annuleren, Backspace om te verwijderen.</translation>
+    <translation key="key_editor_current_key">Huidige toets:</translation>
+    <translation key="key_editor_no_selection">Geen toets geselecteerd</translation>
+    <translation key="key_editor_press_key">Druk op een toets...</translation>
+    <translation key="key_editor_empty">(leeg)</translation>
+    <translation key="key_editor_delete">Aangepaste Verwijderen</translation>
+    <translation key="key_editor_changes">{changed}/{total} toetsen gewijzigd</translation>
+    <translation key="key_editor_saved_settings_hint">Aangepaste indeling opgeslagen. Klik op 'Opslaan' in Instellingen om wijzigingen door te voeren.</translation>
+
+    <!-- ================= -->
+    <!-- Status Labels -->
+    <!-- ================= -->
+    <translation key="key_editor_default">Standaard</translation>
+    <translation key="key_editor_custom">Aangepast</translation>
+    <translation key="key_editor_empty_error">Toets {key} mag niet leeg zijn</translation>
+
+    <!-- ================= -->
+    <!-- Buttons -->
+    <!-- ================= -->
+    <translation key="key_editor_save">Opslaan</translation>
+    <translation key="key_editor_reset_all">Alles Resetten</translation>
+    <translation key="key_editor_import">Importeren</translation>
+    <translation key="key_editor_cancel">Annuleren</translation>
+
+    <!-- ================= -->
+    <!-- Dialog Messages -->
+    <!-- ================= -->
+    <translation key="key_editor_saved">Toetsindeling opgeslagen!</translation>
+    <translation key="key_editor_save_error">Fout bij opslaan toetsindeling</translation>
+    <translation key="key_editor_reset_confirm">Alle toetsen resetten naar standaardwaarden?</translation>
+    <translation key="key_editor_import_title">Toetsindeling Importeren</translation>
+    <translation key="key_editor_import_success">Toetsindeling geïmporteerd</translation>
+    <translation key="key_editor_import_error">Fout bij importeren toetsindeling</translation>
+    <translation key="key_editor_no_changes">Geen wijzigingen aangebracht in aangepaste indeling.</translation>
+    <translation key="key_editor_unconfirm_changes">Je hebt niet-opgeslagen wijzigingen. Opslaan voor sluiten?</translation>
+    <translation key="key_editor_delete_custom_layout_confirm">Aangepaste indeling verwijderen en terugkeren naar standaardindeling?</translation>
+    <translation key="key_editor_custom_layout_saved_activated">Aangepaste indeling opgeslagen en geactiveerd.</translation>
+    <translation key="key_editor_error_deleting_custom_layout">Fout bij verwijderen aangepaste indeling.</translation>
+
 </translations>
