--- a/resources/lang/da_DK.xml
+++ b/resources/lang/da_DK.xml
@@ -1,57 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <translations>
     <!-- ==================== -->
-    <!-- HOVEDAPPLIKATIONSTEKSTER -->
+    <!-- HOVEDAPP TEKSTER -->
     <!-- ==================== -->
     <translation key="project_title">Projekt Lyrica</translation>
-    <translation key="file_select_title">Vælg sang</translation>
+    <translation key="file_select_title">Vælg Sang</translation>
     <translation key="play_button_text">▶ Afspil</translation>
-    <translation key="supported_formats">Understøttede formater</translation>
+    <translation key="supported_formats">Understøttede Formater</translation>
 
     <!-- ================= -->
     <!-- ADVARSELER & FEJL -->
     <!-- ================= -->
     <translation key="warning_title">Advarsel</translation>
     <translation key="error_title">Fejl</translation>
-    <translation key="choose_song_warning">Vælg venligst en sang før du fortsætter.</translation>
+    <translation key="choose_song_warning">Vælg venligst en sang</translation>
     <translation key="play_error_message">Fejl ved afspilning af musik</translation>
     <translation key="security_error_path">Uautoriseret filsti</translation>
     <translation key="invalid_file_format">Ugyldigt filformat. Understøttet: .json, .txt, .skysheet</translation>
     <translation key="sky_window_not_found">Sky-vindue ikke fundet</translation>
-    <translation key="window_focus_error">Kan ikke sætte fokus på vinduet</translation>
+    <translation key="window_focus_error">Kunne ikke fokusere vindue</translation>
     <translation key="browser_open_error">Kunne ikke åbne browser</translation>
     <translation key="sky_not_running">Sky skal køre!</translation>
     <translation key="missing_song_notes">Sangdata mangler (songNotes)</translation>
     <translation key="invalid_speed">Ugyldig hastighed! Skal være større end 0.</translation>
     <translation key="invalid_song_format">Ugyldigt sangformat</translation>
 
+    <translation key="sky_only_warning">Virker kun i Sky! Start venligst Sky Children of the Light.</translation>
+    <translation key="sky_window_focus_error">Kunne ikke fokusere Sky-vindue. Sørg for at Sky kører og er synlig.</translation>
+
+    <translation key="speed_too_slow">Hastighed for langsom. Minimumshastighed er {min_speed}. Sætter til {min_speed_again}.</translation>
+    <translation key="speed_too_fast">Hastighed for hurtig. Maksimal hastighed er {max_speed}. Sætter til {max_speed_again}.</translation>
+    <translation key="speed_setting_failed">Kunne ikke indstille hastighed: {error}</translation>
+
     <!-- ================= -->
-    <!-- MUSIKAFSPILLERFUNKTIONER -->
+    <!-- MUSIKAFSPILLER FUNKTIONER -->
     <!-- ================= -->
     <translation key="key_press">Tastetryk</translation>
     <translation key="enabled">Aktiveret</translation>
     <translation key="disabled">Deaktiveret</translation>
     <translation key="duration">Varighed af tastetryk</translation>
     <translation key="speed_control">Hastighed</translation>
-    <translation key="current_speed">aktuel hastighed</translation>
-    <translation key="preset">Præindstilling</translation>
-
+    <translation key="current_speed">Nuværende hastighed</translation>
+    <translation key="preset">Forudindstilling</translation>
+    
     <!-- ================= -->
     <!-- SPROG & LAYOUT -->
     <!-- ================= -->
-    <translation key="language_window_title">Vælg sprog</translation>
+    <translation key="language_window_title">Sprogvalg</translation>
     <translation key="select_language">Vælg sprog:</translation>
-    <translation key="language_saved">Sprog er gemt</translation>
+    <translation key="language_saved">Sprog gemt</translation>
     <translation key="save_button_text">Gem</translation>
-    <translation key="smooth_ramping">Glatte Overgange</translation>
-    <translation key="smooth_ramping_info">Justerer hastigheden blødt i begyndelsen og slutningen af sangen for mere naturlige overgange.</translation>
-    <translation key="playing_button_text">Spiller...</translation>
-    <translation key="paused_button_text">Pauset</translation>
-    <translation key="restart_button_text">Genstarte?</translation>
+    <translation key="smooth_ramping">Glatte overgange</translation>
+    <translation key="smooth_ramping_info">Jævn hastighedsændring i starten og slutningen af sangen for mere naturlige overgange.</translation>
+    <translation key="playing_button_text">Afspiller...</translation>
+    <translation key="paused_button_text">På pause</translation>
+    <translation key="restart_button_text">Genstart?</translation>
     <translation key="pause_key_hint">eller brug [pause_key]</translation>
     
     <!-- ================= -->
-    <!-- VERSIONOPLYSNINGER -->
+    <!-- VERSION INFORMATION -->
     <!-- ================= -->
     <translation key="update_available_text">Opdatering tilgængelig! v {}</translation>
     <translation key="current_version_text">v {}</translation>
@@ -61,12 +68,141 @@
     <!-- ================= -->
     <!-- SkyChecker -->
     <!-- ================= -->
-    <translation key="window_settings_title">Sky.exe valg</translation>
-    <translation key="select_sky_exe_instruction">Vælg venligst Sky.exe:</translation>
+    <translation key="window_settings_title">Sky.exe Valg</translation>
+    <translation key="select_sky_exe_instruction">Vælg venligst Sky.exe filen:</translation>
     <translation key="select_sky_exe">Vælg Sky.exe</translation>
     <translation key="exe_path_required">Du skal vælge Sky.exe for at fortsætte</translation>
-    <translation key="exe_path_required_exit">Applikationen afsluttes, da Sky.exe er påkrævet</translation>
-    <translation key="must_select_sky">Vælg venligst Sky.exe-filen</translation>
+    <translation key="exe_path_required_exit">Applikationen afsluttes fordi Sky.exe er påkrævet</translation>
+    <translation key="must_select_sky">Vælg venligst Sky.exe filen</translation>
     <translation key="exe_path_invalid">Den valgte fil eksisterer ikke</translation>
+
+    <!-- ================= -->
+    <!-- Indstillinger Vindue -->
+    <!-- ================= -->
+    <translation key="settings_window_title">Indstillinger</translation>
+    <translation key="info_title">Information</translation>
+
+    <!-- ================= -->
+    <!-- Spil Indstillinger -->
+    <!-- ================= -->
+    <translation key="settings_game_title">Spil Indstillinger</translation>
+    <translation key="settings_sky_path">Sky.exe Sti</translation>
+
+    <!-- ================= -->
+    <!-- Afspilnings Indstillinger -->
+    <!-- ================= -->
+    <translation key="settings_playback_title">Afspilnings Indstillinger</translation>
+    <translation key="settings_key_durations">Tastetryk Varighed</translation>
+    <translation key="settings_key_durations_hint">(sekunder adskilt af komma)</translation>
+    <translation key="settings_speed_presets">Hastigheder</translation>
+    <translation key="settings_speed_presets_hint">(værdier adskilt af komma)</translation>
+    <translation key="settings_custom_keys">Brugerdefinerede Taster</translation>
+    <translation key="settings_edit_keys">Rediger Taster</translation>
+    <translation key="settings_custom_keys_status">{count} taster tilpasset</translation>
+    <translation key="settings_using_default_layout">Brug standard layout</translation>
+    <translation key="settings_custom_active">Brugerdefineret (aktiv)</translation>
+    <translation key="settings_custom_available">Brugerdefineret tilgængelig</translation>
+
+    <!-- ================= -->
+    <!-- Forsinkelser -->
+    <!-- ================= -->
+    <translation key="settings_delays_title">Forsinkelser</translation>
+    <translation key="settings_initial_delay">Start Forsinkelse</translation>
+    <translation key="settings_pause_delay">Pause Forsinkelse</translation>
+
+    <!-- ================= -->
+    <!-- Hastighedsovergange -->
+    <!-- ================= -->
+    <translation key="settings_ramping_title">Hastighedsovergange</translation>
+    <translation key="settings_ramping_start">Start Trin</translation>
+    <translation key="settings_ramping_start_hint">(50% → 100%)</translation>
+    <translation key="settings_ramping_end">Slut Trin</translation>
+    <translation key="settings_ramping_end_hint">(100% → 50%)</translation>
+    <translation key="settings_ramping_after_pause">Efter Pause Trin</translation>
+    <translation key="settings_ramping_pause_hint">(50% → 100%)</translation>
+
+    <!-- ================= -->
+    <!-- Interface -->
+    <!-- ================= -->
+    <translation key="settings_interface_title">Interface</translation>
+    <translation key="settings_language">Sprog</translation>
+    <translation key="settings_theme">Tema</translation>
+    <translation key="theme_dark">Mørk</translation>
+    <translation key="theme_light">Lys</translation>
+    <translation key="settings_keyboard_layout">Tastatur Layout</translation>
+    <translation key="settings_pause_key">Pause Taste</translation>
+
+    <!-- ================= -->
+    <!-- Knapper -->
+    <!-- ================= -->
+    <translation key="settings_save">Gem</translation>
+    <translation key="settings_reset">Nulstil</translation>
+    <translation key="settings_cancel">Annuller</translation>
+
+    <!-- ================= -->
+    <!-- Beskeder -->
+    <!-- ================= -->
+    <translation key="settings_saved">Indstillinger gemt!</translation>
+    <translation key="settings_save_error">Fejl ved gemning af indstillinger</translation>
+    <translation key="settings_reset_confirm">Nulstil alle indstillinger til standardværdier?</translation>
+    <translation key="settings_reset_success">Indstillinger nulstillet!</translation>
+    <translation key="settings_reset_error">Fejl ved nulstilling</translation>
+    <translation key="settings_restart_required">Nogle indstillinger kræver genstart for at træde i kraft.</translation>
+    <translation key="settings_restart_now">Genstart nu?</translation>
+    <translation key="settings_restart_later">Indstillinger gemt. Genstart venligst appen senere.</translation>
+    <translation key="settings_restart_failed">Automatisk genstart mislykkedes. Genstart venligst appen manuelt.</translation>
+    <translation key="custom_layout_not_found">Brugerdefineret layout ikke fundet. Skiftede automatisk til {fallback_layout}.</translation>
+
+    <!-- ================= -->
+    <!-- Validerings Fejl -->
+    <!-- ================= -->
+    <translation key="settings_error_numbers">Indtast venligst gyldige tal</translation>
+    <translation key="settings_error_positive">Indtast venligst positive værdier</translation>
+    <translation key="settings_error_empty">Udfyld venligst alle felter</translation>
+    <translation key="settings_error_pause_key">Pause-tasten skal være præcis ét tegn</translation>
+    <translation key="settings_error_general">Ugyldig indtastning</translation>
+
+    <!-- ================= -->
+    <!-- Taste Editor -->
+    <!-- ================= -->
+    <translation key="key_editor_title">Taste Layout Editor</translation>
+    <translation key="key_editor_instructions">Klik på en tast nedenfor og tryk derefter på den ønskede layout på dit tastatur. Escape for at annullere, Backspace for at slette.</translation>
+    <translation key="key_editor_current_key">Nuværende tast:</translation>
+    <translation key="key_editor_no_selection">Ingen tast valgt</translation>
+    <translation key="key_editor_press_key">Tryk på en tast...</translation>
+    <translation key="key_editor_empty">(tom)</translation>
+    <translation key="key_editor_delete">Slet Brugerdefineret</translation>
+    <translation key="key_editor_changes">{changed}/{total} taster ændret</translation>
+    <translation key="key_editor_saved_settings_hint">Brugerdefineret layout gemt. Klik venligst 'Gem' i Indstillinger for at ændringerne træder i kraft.</translation>
+
+    <!-- ================= -->
+    <!-- Status Etiketter -->
+    <!-- ================= -->
+    <translation key="key_editor_default">Standard</translation>
+    <translation key="key_editor_custom">Tilpasset</translation>
+    <translation key="key_editor_empty_error">Tasten {key} kan ikke være tom</translation>
+
+    <!-- ================= -->
+    <!-- Knapper -->
+    <!-- ================= -->
+    <translation key="key_editor_save">Gem</translation>
+    <translation key="key_editor_reset_all">Nulstil Alle</translation>
+    <translation key="key_editor_import">Importer</translation>
+    <translation key="key_editor_cancel">Annuller</translation>
+
+    <!-- ================= -->
+    <!-- Dialog Beskeder -->
+    <!-- ================= -->
+    <translation key="key_editor_saved">Taste layout gemt!</translation>
+    <translation key="key_editor_save_error">Fejl ved gemning af taste layout</translation>
+    <translation key="key_editor_reset_confirm">Nulstil alle taster til standardværdier?</translation>
+    <translation key="key_editor_import_title">Importer Taste Layout</translation>
+    <translation key="key_editor_import_success">Taste layout importeret</translation>
+    <translation key="key_editor_import_error">Fejl ved import af taste layout</translation>
+    <translation key="key_editor_no_changes">Ingen ændringer foretaget til brugerdefineret layout.</translation>
+    <translation key="key_editor_unconfirm_changes">Du har ugemte ændringer. Gem før lukning?</translation>
+    <translation key="key_editor_delete_custom_layout_confirm">Slet brugerdefineret layout og vend tilbage til standard layout?</translation>
+    <translation key="key_editor_custom_layout_saved_activated">Brugerdefineret layout gemt og aktiveret.</translation>
+    <translation key="key_editor_error_deleting_custom_layout">Fejl ved sletning af brugerdefineret layout.</translation>
 
 </translations>
